--- a/dublin_bus/dbus/static/dbus/index.css
+++ b/dublin_bus/dbus/static/dbus/index.css
@@ -89,7 +89,7 @@ padding-left: 15px;
 
 }
 
-#weather {
+/*#weather {
   width:400px;
   height: 150px;
 }
@@ -102,4 +102,4 @@ padding-left: 15px;
   float:right;
   background: #FD3AB7;
   border-radius:0 0 100px 0;
-}
+}*/
