--- a/dublin_bus/dbus/templates/dbus/index.html
+++ b/dublin_bus/dbus/templates/dbus/index.html
@@ -8,7 +8,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
+    <!-- <link rel="icon" href="../../favicon.ico"> -->
 
     <title>Bus App</title>
 
@@ -23,7 +23,8 @@
 <!-- bootstrap-datetimepicker -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-      
+      <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+      <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   </head>
 
 
@@ -43,35 +44,42 @@
       
     <div class="container">
       <div class="jumbotron text-center col-md-6">
-	<span id="invalid"><p></p></span>
-        <form method = "POST" class = "post-form" id="post-form1">{% csrf_token %}
-	  Start Address<br>
-	  <input id="start_address" type="text" name="start_address">
-	  <br>
-          End Address<br>
-	  <input id="end_address" type="text" name="end_address">
-	  <br>
-	  <br>
-	  <input id="address_submit" type="submit"></input>
-	  </form>
-	  <form method = "POST" class = "post-form" id = "post-form">{% csrf_token %}
-          Route:<br>
-            <select id="routes" >
-              <option>Select Route</option>
-            </select>
-
+          <div id="box1" style="float:left;width:49%;border:1px solid black;background-image:url(https://www.google.ie/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwjSnqiywsbcAhWlKsAKHeMYDrQQjRx6BAgBEAU&url=https%3A%2F%2Ffreebiesbug.com%2Fcode-stuff%2Fweather-loading-animation%2F&psig=AOvVaw115UXsyJDcTM6V02ztlcac&ust=1533029587999602);border-radius: 10px;color:#FD3AB7;">
+            <img id="icon" src="http://openweathermap.org/img/w/10d.png" />
+            <p>{{ weather.temp }}</p> &#8451;
+            <p>{{weather.mainDescription}}</p>
+          </div>
           <br>
+	      <span id="invalid"><p></p></span><br>
+        <form method = "POST" class = "post-form" id="post-form1" required>{% csrf_token %}
+	        Start Address<br>
+	        <input id="start_address" type="text" name="start_address"><br>
+          End Address<br>
+	        <input id="end_address" type="text" name="end_address" required><br><br>
+	        <input id="address_submit" type="submit" required></input>
+        </form>
+    
+        <form method = "POST" class = "post-form" id = "post-form">{% csrf_token %}
+          Route:<br>
+            <select id="routes" required>
+              <option value="">Select Route</option>
+            </select><br>
           Start Stop:<br>
-            <select id="start">  
-              <option>Select Route</option>
+            <select id="start" required>  
+              <option value="">Select Route</option>
             </select><br>
           End Stop:<br>
-            <select id="end">
-              <option>Select Start Stop</option>
+            <select id="end" required>
+              <option value="">Select Start Stop</option>
             </select>
             <br>
           <button type = "submit" class = "save btn btn-default">Go</button>
         </form>
+
+        <p>Leave Now</p><input type="checkbox" id="checkbox" onclick="disappear()" checked><br>
+        <div id='date_input'>
+          <input type='datetime-local' id='datetime' data-date-inline-picker="true" pattern="[0-9]{4}/[0-9]{2}/[0-9]{2} [0-9]{2}:[0-9]{2}" placeholder="YYYY/MM/DD HH:MM" />
+        </div>
         <div id="results"><p> </p></div>
       </div> 
       <!-- Main component for a primary marketing message or call to action -->
@@ -91,6 +99,35 @@
       var directionsDisplay;
       var directionsService;
       var placeSearch, autocomplete_start, autocomplete_end; 
+      var weather_description = "{{weather.description}}";
+      
+      var c = new Date();
+      var f = new Date(c);
+      f.setDate(f.getDate() + 4);
+
+      function stringifyDate(year, month, day, hour, minute, second) {
+        if (++month < 10)
+          month = '0' + month;
+        if (day < 10)
+          day = '0' + day;
+        if (hour < 10)
+          hour = '0' + hour;
+        return year + '-' + month + '-' + day + 'T' + hour + ':' + minute + ':' + second;
+      }
+
+      min_string = stringifyDate(c.getFullYear(), c.getMonth(), c.getDate(), c.getHours(), c.getMinutes(), c.getSeconds());
+      max_string = stringifyDate(f.getFullYear(), f.getMonth(), f.getDate(), f.getHours(), f.getMinutes(), f.getSeconds());
+
+      $('#datetime').attr('min', min_string);
+      $('#datetime').attr('max', max_string);
+
+      if ($('#checkbox').is(':checked')) {
+        $('#date_input').hide();
+      }
+
+      function disappear(){
+        $('#date_input').toggle();
+      }
 
 	    function validateForm() {
 
@@ -108,7 +145,47 @@
 			    return true;
 		    }		
 	    }
-        
+      
+      var icon_code;
+      switch(weather_description) {
+        case 'broken clouds':
+          icon_code = '04';
+          break;
+        case 'clear sky':
+          icon_code = '01';
+          break;
+        case 'few clouds':
+          icon_code = '02';
+          break;
+        case 'scattered clouds': 
+          icon_code = '03';
+          break;
+        case 'shower rain':
+          icon_code = '09';
+          break;
+        case 'rain': 
+          icon_code = '10';
+          break;
+        case 'thunderstorm': 
+          icon_code = '11';
+          break;
+        case 'snow':
+          icon_code = '13';
+          break;
+        case 'mist':
+          icon_code = '50';
+          break;
+        default: 
+          icon_code = '04';
+      }
+      
+      if (7 < new Date().getHours() < 21) {
+        icon_code += 'd';
+      } else {
+        icon_code += 'n';
+      }
+      $("#icon").attr("src","http://openweathermap.org/img/w/" + icon_code + ".png");
+
       function initMap(){
 	      directionsDisplay = new google.maps.DirectionsRenderer({suppressMarkers:true});
         directionsService = new google.maps.DirectionsService();
@@ -240,12 +317,6 @@
         routes['{{stop.route_number}}']['{{stop.route_direction}}'].push(mystop)
       {% endfor %} 
 
-      //console.log('stops')
-      //console.log(stops)
-      //console.log('routes')
-      //console.log(routes)
-
-
 
       $(document).ready(function(){
 
@@ -319,7 +390,6 @@
           var found = false;
 
           routes[route][d].forEach(function(element){
-            //console.log(start, element.stop_id, found)
             if (found){
               options += '<option>' + element.stop_id + ", " + stops[element.stop_id]['stop_address'] + " (" + direction + ")</option>";
             };
@@ -327,7 +397,7 @@
               found = true;
             };
           });
-          //console.log(options);
+
           $('#end').html('<option>Select End Stop</option>');
           $('#end').append(options);
           $('#end').prop('disabled', false);  
@@ -340,11 +410,21 @@
           getPredictions()
         });
 
+        function getInputDate(){
+          if ($('#checkbox').is(':checked')){
+            console.log('actual datetime')
+            return c;
+          } else {
+            console.log('input datetime')
+            return new Date($('#datetime').val());
+          }
+        }
+
         function getPredictions(){
           route = $("#routes option:selected").text();
           start_stop = $('#start option:selected').text().split(',')[0];
           end_stop = $('#end option:selected').text().split(',')[0];
-          date = new Date();
+          date = getInputDate()
           year = date.getFullYear();
           month = date.getMonth() + 1;
           day = date.getDate();
@@ -360,7 +440,6 @@
               $('#results').html(data);
           });
 	        $.get('/popStops/', {route: route, start_stop: start_stop, end_stop: end_stop}, function(data){
-            console.log(data)
             popStops(data['stops']);
             drawRoute(data['stops']);
           });
@@ -393,19 +472,18 @@
           }
     
           directionsService.route(request, function(result, status){              
-            if (status == 'OK') {
-              console.log(result);{            
+            if (status == 'OK') {            
               directionsDisplay.setDirections(result);
-              }
+              
             }
           });
         }          
 
         function popStops(context){
-          console.log(context)
           removeMarkers();
           markers = []
           for (var i in context) {
+            
             for (var key in context[i]) {   
               var marker = new google.maps.Marker({
                 position: {lat: Number(context[i][key]["lat"]), lng: Number(context[i][key]["lon"])},
@@ -415,21 +493,25 @@
               });
               markers.push(marker)
             };
-          
-            var content = "<table> <tr> <th> Route </th> <th style = 'padding : 5px'> ETA(mins) </th> </tr> " 
-            for (j in context[0][0]["rtpi"]["results"]){
-              content = content + "<tr> <td>" + context[0][0]["rtpi"]["results"][j]["route"] + "</td> <td>" + context[0][0]["rtpi"]["results"][j]["duetime"] + "</td> </tr>"
-            };
+
+            if (!$('#checkbox').is(':checked')){
+
+              var content = "<table> <tr> <th> Route </th> <th style = 'padding : 5px'> ETA(mins) </th> </tr> " 
+              for (j in context[0][0]["rtpi"]["results"]){
+                content = content + "<tr> <td>" + context[0][0]["rtpi"]["results"][j]["route"] + "</td> <td>" + context[0][0]["rtpi"]["results"][j]["duetime"] + "</td> </tr>"
+              };
+              
+              var infowindow = new google.maps.InfoWindow({
+                content: content
+              });
             
-            var infowindow = new google.maps.InfoWindow({
-              content: content
-            });
-          
-            infowindow.open(map, markers[0]);
-            google.maps.event.addListener(markers[0], 'click', function() {
-              console.log("hello");
               infowindow.open(map, markers[0]);
-            });
+              google.maps.event.addListener(markers[0], 'click', function() {
+                console.log("hello");
+                infowindow.open(map, markers[0]);
+              });
+            }
+
           };
         };
 
@@ -440,11 +522,11 @@
           output.push(context)		
           context = JSON.stringify(output)		
           
-          date = new Date();
-                year = date.getFullYear();
-                      month = date.getMonth() + 1;
-                      day = date.getDate();
-                      hour = date.getHours();
+          date = getInputDate();
+          year = date.getFullYear();
+          month = date.getMonth() + 1;
+          day = date.getDate();
+          hour = date.getHours();
       
           $.get('/predict_address/', {context: context, year: year, month: month, day: day, hour: hour}, function(data) {
             if (data["error"] == "0") {
