last branch commit

--- a/dublin_bus/dbus/templates/dbus/index.html
+++ b/dublin_bus/dbus/templates/dbus/index.html
@@ -51,7 +51,7 @@
             </div>
         </div>-->
           <!--<div id="boxes" style="width:100%;border:1px;">-->
-            <div id="box1" style="float:left;width:49%;border:1px solid black;background-image:url(https://www.google.ie/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwjSnqiywsbcAhWlKsAKHeMYDrQQjRx6BAgBEAU&url=https%3A%2F%2Ffreebiesbug.com%2Fcode-stuff%2Fweather-loading-animation%2F&psig=AOvVaw115UXsyJDcTM6V02ztlcac&ust=1533029587999602);border-radius: 10px;color:#FD3AB7;"><img id="icon" src="http://openweathermap.org/img/w/10d.png"><br>{{ weather.temp }} &#8451;
+            <div id="box1" style="float:left;width:49%;border:1px solid black;background-image:url(https://images.pexels.com/photos/414659/pexels-photo-414659.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);border-radius: 10px;color:#FD3AB7;"><img id="icon" src="http://openweathermap.org/img/w/10d.png"><br>{{ weather.temp }} &#8451;
             <br> {{weather.mainDescription}}
             </div>
             <!--<div id="box2" style="float:right;width:49%;border:1px solid black;background: #FD3AB7">BOX2 CONTEXT</div>-->
