--- a/dublin_bus/dbus/templates/dbus/index.html
+++ b/dublin_bus/dbus/templates/dbus/index.html
@@ -93,7 +93,7 @@
             
             Leave Now <input type="checkbox" id="checkbox" onclick="disappear()" checked><br>
         <div id='date_input'>
-          <input type='datetime-local' id='dateTime' data-date-inline-picker="true" pattern="[0-9]{4}/[0-9]{2}/[0-9]{2} [0-9]{2}:[0-9]{2}" placeholder="YYYY/MM/DD HH:MM" />
+          <input type='datetime-local' id='datetime' data-date-inline-picker="true" pattern="[0-9]{4}/[0-9]{2}/[0-9]{2} [0-9]{2}:[0-9]{2}" placeholder="YYYY/MM/DD HH:MM" />
         </div>
             <br>
             <button type = "submit" class = "save btn btn-default">Go</button>
@@ -501,21 +501,32 @@
         }          
 
         function popStops(context){
+          console.log(context)
           removeMarkers();
           markers = []
           for (var i in context) {
             
-            for (var key in context[i]) {   
+            
               var marker = new google.maps.Marker({
-                position: {lat: Number(context[i][key]["lat"]), lng: Number(context[i][key]["lon"])},
+                position: {lat: Number(context[i][0]["lat"]), lng: Number(context[i][0]["lon"])},
                 map: map,
-                title: context[i][key]["stop"],
+                title: context[i][0]["stop"],
                 //icon :  "/static/images/bus-station.svg"
               });
               markers.push(marker)
-            };
+	      length = Object.keys(context[i]).length
 
-            if (!$('#checkbox').is(':checked')){
+	      var marker = new google.maps.Marker({
+                position: {lat: Number(context[i][length-1]["lat"]), lng: Number(context[i][length-1]["lon"])},
+                map: map,
+                title: context[i][length-1]["stop"],
+                //icon :  "/static/images/bus-station.svg"
+              });
+              markers.push(marker)
+
+            
+
+            if ($('#checkbox').is(':checked')){
 
               var content = "<table> <tr> <th> Route </th> <th style = 'padding : 5px'> ETA(mins) </th> </tr> " 
               for (j in context[0][0]["rtpi"]["results"]){
